--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,13 @@
 services:
   - type: web
-    name: webportfolio
+    name: portfolio
     env: static
     buildCommand: cd frontend && npm install && npm run build
-    staticPublishPath: ./frontend/build
+    staticPublishPath: frontend/build
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: NODE_VERSION
         value: 18.0.0 
