--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: portfolio
     env: static
-    buildCommand: cd frontend && npm install && npm run build
+    buildCommand: cd frontend && npm install && npm install -g @craco/craco && npm run build
     staticPublishPath: frontend/build
     routes:
       - type: rewrite
@@ -10,4 +10,6 @@ services:
         destination: /index.html
     envVars:
       - key: NODE_VERSION
-        value: 18.0.0 
+        value: 18.17.0
+      - key: GENERATE_SOURCEMAP
+        value: "false" 
